made changes to the section describing the file index of the project.

--- a/README.html
+++ b/README.html
@@ -377,13 +377,13 @@ summary {
 <div id="getting-and-cleaning-data-final-project-by-george-ofulu" class="section level1">
 <h1>Getting and Cleaning Data — Final Project by George Ofulu</h1>
 <p>This is my submission to the John Hopkin’s “Getting and Cleaning Data” course on coursera — Part of the Data Science specialization</p>
-<div id="introduction" class="section level3">
-<h3>Introduction</h3>
-<p>This is a final project for the Getting and Cleaning Data course in the <a href="https://www.coursera.org/specializations/jhu-data-science?utm_source=gg&amp;utm_medium=sem&amp;utm_campaign=01-BrandedSearch-US&amp;utm_content=01-BrandedSearch-US&amp;campaignid=380484307&amp;adgroupid=102187343498&amp;device=c&amp;keyword=&amp;matchtype=b&amp;network=g&amp;devicemodel=&amp;adpostion=&amp;creativeid=433079694377&amp;hide_mobile_promo&amp;gclid=CjwKCAjwoc_8BRAcEiwAzJevtWsVrzhDwzbHDXb6PMB_gp37j5UEhnbKtp6FeacF3hcBZhvIpqBVBRoC_TUQAvD_BwE">John Hopkin’s Data Science Specialization</a>. The aim is to do some data analysis workflow tasks such as collecting data, some basic wrangling, and also be able to document it properly with a very descriptive Cookbook and Readme file for reproducibilty and context in downstream datascience workflow tasks such as modelling.</p>
+<div id="introduction" class="section level4">
+<h4>1. Introduction</h4>
+<p>This is a final project for the Getting and Cleaning Data course in the <a href="https://www.coursera.org/specializations/jhu-data-science?utm_source=gg&amp;utm_medium=sem&amp;utm_campaign=01-BrandedSearch-US&amp;utm_content=01-BrandedSearch-US&amp;campaignid=380484307&amp;adgroupid=102187343498&amp;device=c&amp;keyword=&amp;matchtype=b&amp;network=g&amp;devicemodel=&amp;adpostion=&amp;creativeid=433079694377&amp;hide_mobile_promo&amp;gclid=CjwKCAjwoc_8BRAcEiwAzJevtWsVrzhDwzbHDXb6PMB_gp37j5UEhnbKtp6FeacF3hcBZhvIpqBVBRoC_TUQAvD_BwE">John Hopkin’s Data Science Specialization</a>. The aim is to do some data analysis workflow tasks such as collecting data, some basic wrangling, and also be able to document it properly with very descriptive Cookbook.rmd and Readme.md files for reproducibilty and context in downstream datascience workflow tasks such as modelling.</p>
 <p>The data is gotten from the <a href="http://archive.ics.uci.edu/ml/datasets/Human+Activity+Recognition+Using+Smartphones">UCI Machine Learning Repository</a>. 30 volunteers were asked to do 7 tasks (walking, walking upstairs, walking downstairs, sitting, standing, and laying) wearing the Samsung SII on their waist. The built-in accelerometer and gyrometers of the device generated tri-axial linear acceleration data and tri-axial angular velocity data. These raw data signals were passed through some signal preprocessing as detailed in the readme file of the downloaded dataset from the <a href="https://d396qusza40orc.cloudfront.net/getdata%2Fprojectfiles%2FUCI%20HAR%20Dataset.zip">UCI_HAR_DataDownloadLink</a>.</p>
 </div>
-<div id="files" class="section level3">
-<h3>Files</h3>
+<div id="files" class="section level4">
+<h4>2. Files</h4>
 <p>The following files are used in the project:</p>
 <ol style="list-style-type: decimal">
 <li><strong>rawData:</strong> Conatins the raw data downloaded from the UCI Machine Learning Repository</li>
@@ -393,8 +393,8 @@ summary {
 <li><strong>tidyHARData.csv:</strong> The final tidy dataset in csv format.</li>
 </ol>
 </div>
-<div id="data-output" class="section level3">
-<h3>Data Output</h3>
+<div id="data-output" class="section level4">
+<h4>3. Data Output</h4>
 <p>The rawData would be passed through the following highlevel wrangling steps to produce tidyHARData.csv — the tidy dataset. Please refer to the cookbook.rmd file for more details of the processing steps.</p>
 <ul>
 <li>Merge the training and the test sets to create one data set.</li>
